<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.6</version>
        <relativePath/>
    </parent>

    <groupId>com.endlessworkshop</groupId>
    <artifactId>ewshop</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>EndlessWorkshop</name>
    <description>EndlessWorkshop Parent Project</description>

    <properties>
        <java.version>25</java.version>
    </properties>

    <modules>
        <module>app</module>
        <module>api</module>
        <module>facade</module>
        <module>domain</module>
        <module>infrastructure</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- Project Modules Version Management -->
            <dependency>
                <groupId>com.endlessworkshop</groupId>
                <artifactId>app</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.endlessworkshop</groupId>
                <artifactId>api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.endlessworkshop</groupId>
                <artifactId>facade</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.endlessworkshop</groupId>
                <artifactId>domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.endlessworkshop</groupId>
                <artifactId>infrastructure</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>